--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@use '/src/mixins' as mixins;
 html, body {
   margin: 0;
   padding: 0;
@@ -192,7 +193,7 @@ html, body {
     }
 
     20% {
-      transform: scale(1.2, 0.8) translate3d(-4px, 0, 0) rotate(-5deg);
+      transform: scale(1.2, 0.8) translate3d(-6px, 0, 0) rotate(-5deg);
     }
 
     50% {
@@ -200,7 +201,7 @@ html, body {
     }
 
     70% {
-      transform: scale(0.6, 1.4) translate3d(4px, 0, 0) rotate(5deg);
+      transform: scale(0.6, 1.4) translate3d(6px, 0, 0) rotate(5deg);
     }
 
     to {
@@ -209,30 +210,37 @@ html, body {
   }
 
   @keyframes squeeze {
-    from {
-      transform: scaleX(1);
+    0% {
+      transform: scale3d(1, 1, 1);
     }
-
-    20% {
-      transform: scaleY(0.6) scaleX(1.4);
+    30% {
+      transform: scale3d(1.25, 0.75, 1);
     }
-
+    40% {
+      transform: scale3d(0.75, 1.25, 1);
+    }
     50% {
-      transform: scaleY(1) scaleX(1);
+      transform: scale3d(1.15, 0.85, 1);
     }
-
-    70% {
-      transform: scaleY(0.8) scaleX(1.2);
+    65% {
+      transform: scale3d(0.95, 1.05, 1);
     }
-
-    to {
-      transform: scaleY(1) scaleX(1);
+    75% {
+      transform: scale3d(1.05, 0.95, 1);
+    }
+    100% {
+      transform: scale3d(1, 1, 1);
     }
   }
 }
 
 .mat-menu-panel {
   border-radius: 8px !important;
+}
+
+.mat-select-panel {
+  @include mixins.scrollable();
+  padding: 0 !important;
 }
 
 .app {
