feat(menu): update styles

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -31,6 +31,7 @@
         <mat-icon class="mat-item__icon mat-item__icon--rotate">settings</mat-icon>
         <span>{{"MENU.SETTINGS" | translate}}</span>
       </button>
+      <div class="mat-menu__divider"></div>
       <!--TODO: Uncomment when rewrite feedbacks -->
       <!-- <button class="menu-item" mat-menu-item (click)="onFeedback()">
         <span>{{"MENU.FEEDBACK" | translate}}</span>
