--- a/src/app/shared/components/records-table/records-table.component.html
+++ b/src/app/shared/components/records-table/records-table.component.html
@@ -88,6 +88,7 @@
       <mat-icon>edit</mat-icon>
       <span>{{"MENU.EDIT" | translate}}</span>
     </button>
+    <div class="mat-menu__divider"></div>
     <button class="menu-item menu-item--delete" mat-menu-item (click)="onDelete()">
       <mat-icon class="mat-item__icon mat-item__icon--delete">delete</mat-icon>
       <span>{{"MENU.DELETE" | translate}}</span>
