--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
@@ -26,7 +26,7 @@
     display: flex;
     align-items: center;
     width: 22px;
-    margin-right: 4px;
+    margin: 0px 4px;
   }
 
   &__name {
@@ -74,7 +74,7 @@
     align-items: center;
     height: 22px;
     width: 22px;
-    margin-right: 8px;
+    margin-left: auto;
   }
 
   &__expand-button {
