refactor(tabs): style

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -10,6 +10,7 @@ $font-white: white;
 
 $background-primary: white;
 $background-secondary: #f7f7f7;
+$background-header-primary: #323030;
 
 $button-color-primary: #0d7f1e;
 $button-color-secondary: #4b4848;
