--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
@@ -52,7 +52,7 @@
     cursor: pointer;
     border-radius: 8px;
     line-height: 1.5rem;
-    transition: background-color 0.1s linear;
+    transition: background-color 0.1s ease-out;
 
     &:hover {
       background: rgba(0,0,0,0.05);
