--- a/src/app/shared/ubuntu/ubuntu-container/ubuntu-container.component.html
+++ b/src/app/shared/ubuntu/ubuntu-container/ubuntu-container.component.html
@@ -12,7 +12,7 @@
     </div>
   </header>
 
-  <main class="ubuntu-container__content">
+  <main class="ubuntu-container__content" [class.ubuntu-container__content--with-borders]="hasBordersStyle">
     <ng-content></ng-content>
   </main>
 </div>
