--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,6 +63,7 @@ html, body {
   line-height: 1.5;
   background: #333;
   border-radius: 8px !important;
+  white-space: pre-line;
 }
 
 .mat-tooltip--long-text {
