--- a/src/app/shared/components/tabs/tabs.component.html
+++ b/src/app/shared/components/tabs/tabs.component.html
@@ -1,8 +1,8 @@
 <div class="tabs">
   <div class="tabs__title">
     <div #tabsRef class="tabs__tabs-section">
-      <div #tabCoverRef class="tabs__tab--selected"></div>
-      <div class="tabs__tab" *ngFor="let tab of tabs; let i = index;"(click)="onTabSelect(i)">
+      <div #tabCoverRef class="tabs__tab--cover-selected"></div>
+      <div class="tabs__tab" [class.tabs__tab--selected]="selectedtab === i" *ngFor="let tab of tabs; let i = index;"(click)="onTabSelect(i)">
       {{tab | translate}}
       </div>
     </div>
