--- a/src/app/shared/components/tabs/tabs.component.scss
+++ b/src/app/shared/components/tabs/tabs.component.scss
@@ -14,6 +14,7 @@
     position: relative;
     box-sizing: border-box;
     display: flex;
+    gap: 4px;
     height: 32px;
   }
 
@@ -33,11 +34,11 @@
     border-radius: 8px;
     color: white;
     z-index: 1;
-    transition: color 0.4s ease-in-out;
+    transition: color 0.4s ease-in-out,background-color 0.1s ease-in;
 
     cursor: pointer;
 
-    &--selected {
+    &--cover-selected {
       box-sizing: border-box;
       position: absolute;
       height: inherit;
@@ -46,6 +47,10 @@
       border: 1px solid #2b2a2a;
       border-radius: 8px;
       transition: left 0.4s ease-in-out;
+    }
+
+    &:not(.tabs__tab.tabs__tab--selected):hover {
+      background-color: #00000026;
     }
   }
 
