--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,7 @@ html, body {
 }
 
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '/src/colors';
 
 
 .dialog {
@@ -306,4 +307,33 @@ body.no-animations {
   border: 2px solid transparent;
   background-clip: padding-box;
   background-color: transparent;
+}
+
+.mat-form-field {
+  .mat-form-field-ripple {
+    background-color: var(--primary-color);
+   }
+
+   .mat-form-field-required-marker {
+    color: $color-dangerous !important;
+  }
+
+  &.mat-focused {
+    .mat-form-field-ripple {
+      background-color: var(--primary-color);
+     }
+    .mat-select-arrow {
+      color: rgba(0,0,0,.54) !important;
+    }
+  }
+}
+
+.mat-option.mat-selected:not(.mat-option-disabled) {
+  color: var(--primary-color) !important;
+}
+
+.mat-form-field-invalid {
+  .mat-form-field-ripple {
+    background: $color-dangerous !important;
+  }
 }
