feat(create-dialog): disable parent field on edit

--- a/src/app/shared/components/create-dialog/create-dialog.component.html
+++ b/src/app/shared/components/create-dialog/create-dialog.component.html
@@ -20,7 +20,7 @@
       </mat-form-field>
       <mat-form-field [floatLabel]="'always'">
       <mat-label>{{"DIALOG.FIELDS.CATEGORY" | translate}}</mat-label>
-        <mat-select [formControlName]="'parent'">
+        <mat-select [formControlName]="'parent'" [disabled]="data.mode === 1">
           <mat-option *ngFor="let parent of data.parents" [value]="parent.value">
             {{parent.name}}
           </mat-option>
