rafactor(app): styles

--- a/src/_colors.scss
+++ b/src/_colors.scss
@@ -17,3 +17,5 @@ $button-color-secondary: #4b4848;
 $button-color-dangerous: $color-dangerous;
 $button-color-neutral: #fcfcfc;
 $button-color-active: $color-primary;
+
+$separator-color: #dce1e6;
