--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -9,3 +9,15 @@
     background-color: #797979ad;
   }
 }
+
+@mixin scrollable-horizontal {
+  overflow-x: overlay;
+
+  &:hover::-webkit-scrollbar-thumb {
+    background-color: #79797966;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: #797979ad;
+  }
+}
