--- a/src/app/shared/components/print-dialog/preview-page/preview-page.component.scss
+++ b/src/app/shared/components/print-dialog/preview-page/preview-page.component.scss
@@ -9,7 +9,7 @@
   font-family: Ubuntu;
   background: white;
   box-sizing: border-box;
-  border: 1px solid #ccc;
+  box-shadow: 0 1px 0 0 $separator-color, 0 0 0 1px #e7e8ec;
   user-select: none;
 
   &__title-container {
