--- a/src/app/category-details/category-details.component.html
+++ b/src/app/category-details/category-details.component.html
@@ -64,7 +64,7 @@
     </div>
     </div>
 
-    <ubuntu-container [title]="table.name" [hasBordersStyle]="false" *ngFor="let table of categoryDetails.tables">
+    <ubuntu-container [title]="table.name" *ngFor="let table of categoryDetails.tables">
       <button actions
               *ngIf="categoryDetails.type == CategoryTypeEnum.Car"
               mat-icon-button
