--- a/src/app/shared/components/create-car-dialog/create-car-dialog.component.scss
+++ b/src/app/shared/components/create-car-dialog/create-car-dialog.component.scss
@@ -7,6 +7,7 @@
   flex-direction: column;
   overflow: hidden;
   font-family: "Ubuntu";
+  background: $background-secondary;
 
   &__header {
     height: 50px;
@@ -55,7 +56,7 @@
     @include mixins.scrollable;
 
     height: 100%;
-    padding: 32px;
+    padding: 16px 24px;
 
     mat-form-field {
       font-family: 'Ubuntu';
