chore(app): prepare for release

--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -1,5 +1,9 @@
-@mixin scrollable {
+@mixin scrollable($border-margin: 1px) {
   overflow-y: overlay;
+
+  &::-webkit-scrollbar-thumb {
+    border-top-width: $border-margin;
+  }
 
   &:hover::-webkit-scrollbar-thumb {
     background-color: #79797966;
