--- a/src/app/shared/components/release-notes/release-notes.component.html
+++ b/src/app/shared/components/release-notes/release-notes.component.html
@@ -1,53 +1,141 @@
 <div class="release-notes">
   <header class="release-notes__header">
-    <div class="release-notes__button-container">
-      <mat-form-field class="release-notes__version-select">
-        <mat-select #versionSelect [value]="selectedVersion">
-          <mat-option *ngFor="let release of releases" [value]="release">
-            {{ release }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-    </div>
-    <div class="release-notes__header-text">{{"DIALOG.RELEASE_NOTES.TITLE" | translate}} {{selectedVersion}}</div>
-    <div class="release-notes__button-container">
-      <ubuntu-close-button (close)="dialogRef.close()"></ubuntu-close-button>
-    </div>
+      <h1 class="release-notes__title">Car Maintenance 3.0</h1>
+      <button mat-button class="close-button" (click)="dialogRef.close()"><mat-icon>close</mat-icon></button>
   </header>
 
   <main class="release-notes__content">
-    <div class="release-notes__section" *ngIf="releaseNotes.releaseNotes[selectedVersion][appLanguage].features.length">
-      <div class="release-notes__section-title">
-        {{"DIALOG.RELEASE_NOTES.NEW_FEATURES" | translate}}:
-      </div>
-      <ul>
-        <li class="release-notes__change" *ngFor="let feature of releaseNotes.releaseNotes[selectedVersion][appLanguage].features">
-          {{feature.text}}
-        </li>
-      </ul>
-    </div>
 
-    <div class="release-notes__section" *ngIf="releaseNotes.releaseNotes[selectedVersion][appLanguage].improvements.length">
-      <div class="release-notes__section-title">
-        {{"DIALOG.RELEASE_NOTES.IMPROVEMENTS" | translate}}:
+    <ubuntu-container>
+      <div class="container">
+        <div class="release-notes__section-title">
+          {{releaseNotes[appLanguage].progress.title}}
+        </div>
+        <p class="release-notes__text">{{releaseNotes[appLanguage].progress['0']}}</p>
+        <p class="release-notes__text">{{releaseNotes[appLanguage].progress['1']}}</p>
+        <div class="slide-show" style="height: 441px;">
+          <div class="slide-show__content">
+            <button mat-button class="button"
+                    (click)="onSlideShowChange(progressSlideShowSection, -1)">
+              <mat-icon>
+              navigate_before
+              </mat-icon>
+            </button>
+            <div class="slide-show__image-section">
+              <img class="image" [src]="progressSlideShowSection.links[progressSlideShowSection.selected]" alt="">
+              <div class="slide-show__position">
+                <div class="slide-show__indicator"
+                     (click)="progressSlideShowSection.selected = i"
+                     [class.slide-show__indicator--selected]="progressSlideShowSection.selected === i"
+                     *ngFor="let position of progressSlideShowSection.links; let i = index">
+                </div>
+              </div>
+              <div class="slide-show__note">{{progressSlideShowSection.notes[progressSlideShowSection.selected]}}</div>
+            </div>
+            <button mat-button class="button"
+                    (click)="onSlideShowChange(progressSlideShowSection, 1)">
+              <mat-icon>
+              navigate_next
+              </mat-icon>
+            </button>
+          </div>
+        </div>
       </div>
-      <ul>
-        <li class="release-notes__change" *ngFor="let improvement of releaseNotes.releaseNotes[selectedVersion][appLanguage].improvements">
-          {{improvement.text}}
-        </li>
-      </ul>
-    </div>
+    </ubuntu-container>
 
-    <div class="release-notes__section" *ngIf="releaseNotes.releaseNotes[selectedVersion][appLanguage].bugFixes.length">
-      <div class="release-notes__section-title">
-        {{"DIALOG.RELEASE_NOTES.BUGFIXES" | translate}}:
+    <ubuntu-container>
+      <div class="container">
+        <div class="release-notes__section-title">
+          {{releaseNotes[appLanguage].color.title}}
+        </div>
+        <p class="release-notes__text">{{releaseNotes[appLanguage].color['0']}}</p>
+        <div class="slide-show">
+          <div class="slide-show__content">
+            <button mat-button class="button"
+                    (click)="onSlideShowChange(colorSlideShowSection, -1)">
+              <mat-icon>
+              navigate_before
+              </mat-icon>
+            </button>
+            <div class="slide-show__image-section">
+              <img class="image" [src]="colorSlideShowSection.links[colorSlideShowSection.selected]" alt="">
+              <div class="slide-show__position">
+                <div class="slide-show__indicator"
+                     (click)="colorSlideShowSection.selected = i"
+                     [class.slide-show__indicator--selected]="colorSlideShowSection.selected === i"
+                     *ngFor="let position of colorSlideShowSection.links; let i = index">
+                </div>
+              </div>
+              <div class="slide-show__note" *ngIf="colorSlideShowSection.notes[colorSlideShowSection.selected]">{{colorSlideShowSection.notes[colorSlideShowSection.selected]}}</div>
+            </div>
+            <button mat-button class="button"
+                    (click)="onSlideShowChange(colorSlideShowSection, 1)">
+              <mat-icon>
+              navigate_next
+              </mat-icon>
+            </button>
+          </div>
+        </div>
       </div>
-      <ul>
-        <li class="release-notes__change" *ngFor="let bugFix of releaseNotes.releaseNotes[selectedVersion][appLanguage].bugFixes">
-          {{bugFix.text}}
-        </li>
-      </ul>
-    </div>
+    </ubuntu-container>
+
+    <ubuntu-container>
+      <div class="container">
+        <div class="release-notes__section-title">
+          {{releaseNotes[appLanguage].redesign.title}}
+        </div>
+        <p class="release-notes__text">{{releaseNotes[appLanguage].redesign['0']}}</p>
+        <p class="release-notes__text">{{releaseNotes[appLanguage].redesign['1']}}</p>
+        <video class="release-notes__video" src="assets/release-notes/components-video.mov" controls></video>
+      </div>
+    </ubuntu-container>
+
+    <ubuntu-container>
+      <div class="container">
+        <div class="release-notes__section-title">
+          {{releaseNotes[appLanguage].car.title}}
+        </div>
+        <p class="release-notes__text">{{releaseNotes[appLanguage].car['0']}}</p>
+        <p class="release-notes__text">{{releaseNotes[appLanguage].car['1']}}</p>
+        <div class="slide-show">
+          <div class="slide-show__content">
+            <button mat-button class="button"
+                    (click)="onSlideShowChange(carSlideShowSection, -1)">
+              <mat-icon>
+              navigate_before
+              </mat-icon>
+            </button>
+            <div class="slide-show__image-section">
+              <img class="image" [src]="carSlideShowSection.links[carSlideShowSection.selected]" alt="">
+              <div class="slide-show__position">
+                <div class="slide-show__indicator"
+                     (click)="carSlideShowSection.selected = i"
+                     [class.slide-show__indicator--selected]="carSlideShowSection.selected === i"
+                     *ngFor="let position of carSlideShowSection.links; let i = index">
+                </div>
+              </div>
+              <div class="slide-show__note" *ngIf="carSlideShowSection.notes[colorSlideShowSection.selected]">{{carSlideShowSection.notes[carSlideShowSection.selected]}}</div>
+            </div>
+            <button mat-button class="button"
+                    (click)="onSlideShowChange(carSlideShowSection, 1)">
+              <mat-icon>
+              navigate_next
+              </mat-icon>
+            </button>
+          </div>
+        </div>
+      </div>
+    </ubuntu-container>
+    <ubuntu-container>
+      <div class="container">
+        <div class="release-notes__section-title">
+          {{releaseNotes[appLanguage].notification.title}}
+        </div>
+        <div class="image-container">
+          <img class="image" src="assets/release-notes/notification.png">
+        </div>
+      </div>
+    </ubuntu-container>
   </main>
 
 </div>
