--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@ html, body {
   &-custom {
     .mat-dialog-container {
       padding: 0;
-      border-radius: 8px 8px 0 0;
+      border-radius: 8px 8px 8px 8px;
     }
   }
 
@@ -28,7 +28,7 @@ html, body {
     .mat-dialog-container {
       padding: 0;
 
-      border-radius: 8px 8px 0 0;
+      border-radius: 8px 8px 8px 8px;
       overflow: hidden;
     }
   }
@@ -41,7 +41,8 @@ html, body {
     }
   }
 
-  &-car {
+  &-car,
+  &-notes {
     max-height: 80%;
 
     .mat-dialog-container {
