feat(app): offline mode

--- a/src/app/database-select/database-select.component.scss
+++ b/src/app/database-select/database-select.component.scss
@@ -9,7 +9,7 @@
   &__text {
     margin-bottom: 16px;
 
-    font-family: Open Sans;
+    font-family: system-ui;
     font-size: 18px;
     color: #333;
   }
