--- a/src/app/welcome-page/welcome-page.component.scss
+++ b/src/app/welcome-page/welcome-page.component.scss
@@ -34,7 +34,7 @@
     align-items: center;
     font-size: 24px;
     color: #333;
-    font-family: Open Sans;
+    font-family: system-ui;
   }
 
   &__buttons {
