refactor(categories-tree-node): font

--- a/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
+++ b/src/app/navigation/categories-tree/categories-tree-node/categories-tree-node.component.scss
@@ -1,11 +1,12 @@
 @import '/src/colors';
+@import '/src/fonts';
 
 :host {
   display: block;
 }
 
 .categories-tree-node {
-  font-family: 'Ubuntu';
+  font-family: $font-system;
   width: 100%;
   margin: 1px 0;
 
