--- a/src/app/shared/components/records-table/records-table.component.scss
+++ b/src/app/shared/components/records-table/records-table.component.scss
@@ -1,5 +1,6 @@
 @use '/src/mixins' as mixins;
 @import '/src/colors';
+@import '/src/fonts';
 
 .records-table {
   @include mixins.scrollable;
@@ -7,7 +8,7 @@
   height: 100%;
   box-sizing: border-box;
 
-  font-family: Ubuntu;
+  font-family: $font-system;
   border-radius: 8px;
 
   &--with-borders {
